@@ -9,6 +9,7 @@
 #endif
 
 #if !defined(__SDCC_pdk14) // Lack of memory
+#if !(defined (__SDCC_pdk15) && defined(__SDCC_STACK_AUTO)) // Lack of code memory
 /* PR target/78791 */
 unsigned long long
 foo (unsigned long long x, unsigned long long y, unsigned long long z)
@@ -20,13 +21,16 @@ foo (unsigned long long x, unsigned long long y, unsigned long long z)
   return a + b;
 }
 #endif
+#endif
 
 void
 testTortureExecute (void)
 {
 #if !defined(__SDCC_pdk14) // Lack of memory
+#if !(defined (__SDCC_pdk15) && defined(__SDCC_STACK_AUTO)) // Lack of code memory
   if (foo (64, 7, 0) != 10 || foo (28, 3, 2) != 14)
     ASSERT (0);
   return;
+#endif
 #endif
 }
